<resources>
    <string name="app_name">proyecto_final</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register!</string>
    <string name="email">email</string>
    <string name="go_to_register"><![CDATA[Go to REGISTER>>>]]></string>
    <string name="go_to_login"><![CDATA[<<<Go to LOGIN]]></string>
    <string name="register_button">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="video_downloader">Video Downloader</string>
    <string name="main_text">Pega la URL del video que deseas descargar (Copyrighted videos seran dirigidos a la fuente)</string>
    <string name="video_url">Video URL</string>
    <string name="descargar_video">Descargar Video</string>
    <string name="log_out_button">Log Out Button</string>
    <string name="logout">Logout</string>
    <string name="welcome_back">Welcome Back!</string>
</resources>