<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#079590"
    android:gravity="center"
    android:padding="100dp"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_marginBottom="20dp"
            android:textColor="#FFFFFF"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="#C5FFFFFF"
            android:textSize="25sp"
            android:padding="10dp"
            android:background="@drawable/text_box"
            android:textAlignment="textStart"
            android:inputType="textEmailAddress"
            android:id="@+id/email_input"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="#C5FFFFFF"
            android:textSize="25sp"
            android:padding="10dp"
            android:background="@drawable/text_box"
            android:textAlignment="textStart"
            android:inputType="textPassword"
            android:id="@+id/password_input"
            />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register_button"
            android:textSize="20sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/register_button"
            />

        <TextView
            android:id="@+id/login_page"
            android:text="@string/go_to_login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textColor="#F7B40000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>